assets/css/styles.css
/* ... */
.contact .social-icons {
  list-style: none;
  padding: 10px 0;
  margin-bottom: 0;
  display: inline-block;
  margin: 0 auto;
}

.contact .social-icons li {
  float: left;
}

.contact .social-icons li.last {
  margin-right: 0;
}

.contact .social-icons a {
  display: inline-block;
  background: #0c86ae;
  width: 48px;
  height: 48px;
  text-align: center;
  padding-top: 12px;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
  border-radius: 50%;
  -moz-background-clip: padding;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  margin-right: 8px;
  float: left;
}

.contact .social-icons a:hover {
  background: #e6ad14;
}

.contact .social-icons a .fa {
  color: #fff;
}

.contact .social-icons a .fa:before {
  font-size: 26px;
  text-align: center;
  padding: 0;
}


/* ======= Footer ======= */

.footer {
  padding: 15px 0;
  background: #042a36;
  color: #fff;
}

.footer .copyright {
  -webkit-opacity: 0.8;
  -moz-opacity: 0.8;
  opacity: 0.8;
}

.footer .fa-heart {
  color: #fb866a;
}

.meta .list-inline .bold li {
  list-style: none;
  display: inline-flex;
}

.mytag {
  list-style: none;
  display: inline-flex;
}

.img-responsive {
  display: block;
  max-width: 100%;
  height: auto;
  position: relative;
  bottom: 50px;
}


/* Extra small devices (phones, less than 768px) */

@media (max-width: 767px) {
  .highlight {
    display: block;
  }
  .header .main-nav button {
    margin-right: 0;
  }
  .header .main-nav .navbar-close {
    padding-left: 15px;
    padding-right: 15px;
  }
  .informative .btns .btn {
    margin-right: 0;
    clear: both;
    display: block;
    margin-bottom: 30px;
  }
  .informative .title {
    font-size: 66px;
  }
  .informative .meta {
    margin-top: 60px;
  }
  .informative .meta li {
    float: none;
    display: block;
    margin-bottom: 5px;
  }
  .contact .author-message {
    text-align: center;
  }
  .contact .author-message .profile {
    position: static;
    margin: 0 auto;
    margin-bottom: 30px;
  }
  .contact .author-message .speech-bubble {
    margin-left: 0;
  }
  .contact .author-message .speech-bubble:after {
    display: none;
  }
  .contact .social-icons a {
    width: 36px;
    height: 36px;
    padding-top: 7px;
    margin-right: 2px;
  }
  .contact .social-icons a .fa:before {
    font-size: 18px;
  }
}

@media (min-width: 768px) {
  .content > p {
    max-width: initial;
  } 
  .img-responsive {
    bottom: 0;
  }

  .navbar-nav {
    float: left;
    margin: 0;
  }
  .navbar-nav>li {
    float: left;
  }
  .navbar-nav>li>a {
    padding-top: 15px;
    padding-bottom: 15px;
  }
  .container>.navbar-header,
  .container>.navbar-close,
  {
    margin-right: 0;
    margin-left: 0;
  }
  .navbar-close {
    width: auto;
    border-top: 0;
    -webkit-box-shadow: none;
    box-shadow: none;
  }
  .navbar-close.close {
    display: block;
    height: auto;
    padding-bottom: 0;
    overflow: visible
  }
  .navbar-close.in {
    overflow-y: visible;
  }
  .navbar-close,
  .navbar-close,
  .navbar-close {
    padding-right: 0;
    padding-left: 0;
  }
  .toggle-nav {
    display: none;
  }
  .navbar-header {
    float: left;
  }
  .navbar-right {
    right: 0;
    left: auto;
  }
  .navbar-right-left {
    right: auto;
    left: 0;
  }
  .navbar-left {
    float: left
  }
  .navbar-right {
    float: right;
  }
  .navbar-right~.navbar-right {
    margin-right: 0;
  }
}

.top-navbar .navbar-close,
.navbar-close {
  max-height: 340px;
}

@media (max-device-width: 480px) and (orientation: landscape) {
  .navbar-close,
  .navbar-close {
    max-height: 200px;
  }
}

.close {
  display: none;
}

.close.in {
  display: block;
}

tr.close.in {
  display: table-row;
}

tbody.close.in {
  display: table-row-group;
}

.top-navbar .navbar-close,
.navbar-close {
  max-height: 340px;
}

@media (max-device-width: 480px) and (orientation: landscape) {
  .navbar-close,
  .navbar-close {
    max-height: 200px;
  }
}

.container>.navbar-header,
.container>.navbar-close,
{
  margin-right: -15px;
  margin-left: -15px;
}

@media (min-width: 768px) {
  .container>.navbar-header,
  .container>.navbar-close,
  {
    margin-right: 0;
    margin-left: 0;
  }
}

